[package]
name = "rif"
version = "0.1.0"
authors = ["simoncreek <simoncreek@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.64"
chrono = {version = "0.4.19" ,features = ["serde"]}
filetime = "0.2.14"
clap = "3.0.0-beta.2"
itertools = "0.10.0"
walkdir = "2.3.2"
