[package]
name = "rif"
version = "0.1.0"
authors = ["simoncreek <simoncreek@tutanota.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cli", "text-processing"]
categories = ["command-line-utilities"]
description = "Impact control system"
homepage = "https://github.com/simhyeon/rif"
repository = "https://github.com/simhyeon/rif"
readme = "README.md"

[[bin]]
name = "rif"
path = "src/main.rs"

[lib]
name = "rif"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.64"
chrono = {version = "0.4.19" ,features = ["serde"]}
filetime = "0.2.14"
clap = "3.0.0-beta.2"
itertools = "0.10.0"
colored = "2.0.0"
bincode = "1.3.3"
